--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    //noinspection GradleCompatible
+    implementation  'com.android.support:design:23.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
     implementation "androidx.cardview:cardview:1.0.0"
